[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/hacking/qa.gd" type="Script" id=1]
[ext_resource path="res://assets/hacking/learning_with_computers .mp3" type="AudioStream" id=2]

[node name="qa" type="Node2D"]
script = ExtResource( 1 )

[node name="RootContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer"]
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer/HBoxContainer"]
margin_left = 384.0
margin_right = 896.0
margin_bottom = 720.0
alignment = 1

[node name="QuestionLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 512.0
margin_bottom = 344.0
rect_min_size = Vector2( 512, 0 )
text = "What is the answer?"
fit_content_height = true

[node name="RegexLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 512.0
margin_bottom = 363.0
rect_min_size = Vector2( 512, 0 )
fit_content_height = true

[node name="AnswerInput" type="LineEdit" parent="RootContainer/HBoxContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 512.0
margin_bottom = 391.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true
